Fixed sidebar on mobile view

--- a/styles/Main/main.scss
+++ b/styles/Main/main.scss
@@ -121,6 +121,17 @@
       width: 100%;
       margin-left: 0px !important;
     }
+    .sidebar-item {
+      flex-direction: column;
+      .cover {
+        width: 100% !important;
+        height: 200px !important;
+        margin-bottom: 20px !important;
+      }
+      button {
+        margin-top: 20px !important;
+      }
+    }
   }
 }
 
